--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>哎呦喂</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- noscript 元素用来定义在脚本未被执行时的替代内容 -->
+    <noscript>脚本未被执行</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
